# ImpactaTCC

./: CMakeLists.txt  main.cpp
AppFrontCPP/: CMakeLists.txt  CMakeSettings.json
AppFrontCPP/BD_Examples/BD_DEV/: CMakeLists.txt  main.cpp
AppFrontCPP/BD_Examples/TCC/: CMakeLists.txt  main.cpp
AppFrontCPP/BD_Graphics/: CMakeLists.txt
AppFrontCPP/BD_Graphics/inc/: BD_AnimationTexture.hpp  BD_Curl.hpp  BD_Font.hpp  BD_Graphics.hpp  BD_ResourceManager.hpp  BD_Shader.hpp  BD_SpriteRenderer.hpp  BD_TextRenderer.hpp
AppFrontCPP/BD_Graphics/src/: BD_Curl.cpp  BD_Font.cpp  BD_Graphics.cpp  BD_ResourceManager.cpp  BD_Shader.cpp  BD_SpriteRenderer.cpp  BD_TextRenderer.cpp  BD_Texture.cpp
BD_Core/: CMakeLists.txt
BD_Core/inc/: BD_Core.hpp  BD_Core_curl.hpp
BD_Core/src/: BD_Core.cpp  BD_Core_curl.cpp
BD_Graphics/: CMakeLists.txt
BD_Graphics/inc/: BD_CodeErrors.hpp  BD_Graphics.hpp  BD_ResourceManager.hpp  BD_Shader.h  _BD_Graphics.hpp  _BD_Textures.hpp  filesystem.h  shader_m.h
BD_Graphics/shaders/: defaultFS.glsl  defaultVS.glsl
BD_Graphics/src/: BD_Graphics.cpp  BD_ResourceManager.cpp  _BD_Graphics.cpp  _BD_Textures.cpp  texture.cpp
ImpactaAPI/: ImpactaAPI.sln
ImpactaAPI/ImpactaAPI/: CommunicationBD.cs  ImpactaAPI.csproj  ImpactaAPI.http  Program.cs  appsettings.json
ImpactaAPI/ImpactaAPI/Context/: AppDbContext.cs
ImpactaAPI/ImpactaAPI/Controllers/: CommunicationBDController.cs  GamesNumberController.cs  HitsNumberController.cs  LoginDataController.cs
ImpactaAPI/ImpactaAPI/Models/: Categoria.cs  GamesNumber.cs  HitsNumber.cs  LoginData.cs  Produto.cs
ImpactaAPI/ImpactaAPI/Properties/: launchSettings.json
ImpactaDB/: impacta_db_gamesnumbers.sql  impacta_db_hitsnumbers.sql  impacta_db_logindata.sql
ImpactaDB_AC2/: impacta_db_hitsnumbers.sql  impacta_db_logindata.sql
